<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Concerts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_artists">ArtistsActivity</string>
    <string name="title_activity_shows">ShowsActivity</string>
    <string name="welcomeMsg">Welcome to Pocket Box Office! This will be the easiest way for your to keep tabs on local concerts by your favorite artists. To get started, press the button below.</string>
    <string name="getStarted">Get Started</string>
    <string name="zipCode">zip code</string>
    <string name="importLib">Import Library</string>
    <string name="title_activity_crawler">CrawlerActivity</string>
    <string name="email">ex: johnblaze@example.com</string>
    <string name="phone">ex: 3135551234</string>

    <string-array name="country_array">
        <item>(country)</item>
        <item>United States</item>
        <item>Canada</item>
    </string-array>
    <string-array name="state_array">
        <item>(state)</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>US Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="city_array">
        <item>(closest major city)</item>
        <item>Atlanta</item>
        <item>Detroit</item>
        <item>Miami</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>New York</item>
    </string-array>
    <string-array name="travel_array">
        <item>(travel distance)</item>
        <item>15 miles</item>
        <item>30 miles</item>
        <item>50 miles</item>
    </string-array>
        <string name="optional">optional</string>
        <string name="noshows">-there are currently no concerts for this artist in your area-</string>
        <color name="white">#FFFFFF</color>
        <color name="gray">#C0C0C0</color>
        
        

</resources>